parser/src/test/resources/corpus/valid/06_just_description.ff
rule "Just Description" {
  description: "a placeholder rule for testing"
}
