parser/src/test/resources/corpus/invalid/04_unquoted_rule_name.ff
rule UnquotedName {
  description: "rule names must be quoted strings"
}
